adds new updates

--- a/index.html
+++ b/index.html
@@ -21,28 +21,34 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-
-        <ul class="nav list">
-          <li><a href="" class="nav-link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-          <li><a href="" class="nav-link">Контакты</a></li>
-        </ul>
-      </nav>
-
-      <ul class="address list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="address-info"
-            >info@devstudio.com</a
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-accent">Web</span>Studio</a
           >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="address-info">+38 096 111 11 11</a>
-        </li>
-      </ul>
+
+          <ul class="nav list">
+            <li class="item"><a href="" class="nav-link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="address list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-info"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="address-info"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <!-- Главная секция -->
