--- a/index.html
+++ b/index.html
@@ -21,34 +21,30 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <div class="container">
-        <nav>
-          <a href="./index.html" class="logo"
-            ><span class="logo-accent">Web</span>Studio</a
-          >
+      <section class="header">
+        <div class="container main-nav">
+          <nav class="left-nav">
+            <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
 
-          <ul class="nav list">
-            <li class="item"><a href="" class="nav-link current">Студия</a></li>
+            <ul class="nav list">
+              <li class="item"><a href="" class="nav-link current">Студия</a></li>
+              <li class="item">
+                <a href="./portfolio.html" class="nav-link">Портфолио</a>
+              </li>
+              <li class="item"><a href="" class="nav-link">Контакты</a></li>
+            </ul>
+          </nav>
+
+          <ul class="address-list list">
             <li class="item">
-              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+              <a href="mailto:info@devstudio.com" class="address-info">info@devstudio.com</a>
             </li>
-            <li class="item"><a href="" class="nav-link">Контакты</a></li>
+            <li class="item">
+              <a href="tel:+380961111111" class="address-info">+38 096 111 11 11</a>
+            </li>
           </ul>
-        </nav>
-
-        <ul class="address list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-info"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="address-info"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </div>
+        </div>
+      </section>
     </header>
 
     <!-- Главная секция -->
@@ -56,150 +52,154 @@
       <!-- Герой -->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button button">
-          Заказать услугу
-        </button>
+        <button type="button" class="hero-button button">Заказать услугу</button>
       </section>
 
       <!-- Наши преимущества -->
       <section class="features">
-        <ul class="list">
-          <li>
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-description">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-description">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-description">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li class="item">
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-description">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-description">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-description">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
       <section class="services">
-        <h2 class="services-title title">Чем мы занимаемся</h2>
+        <div class="container">
+          <h2 class="services-title title">Чем мы занимаемся</h2>
 
-        <ul class="services-list list">
-          <li>
-            <img
-              src="./images/box1.jpeg"
-              width="370"
-              height="294"
-              alt="Человек набирает код на планшете. Рядом блок-схема и монитор"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpeg"
-              width="370"
-              height="294"
-              alt="Человек делает прототипы экранов и держит телефон"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box3.jpeg"
-              width="370"
-              height="294"
-              alt="Человек держит планшет с цветовой схемой. На заднем плане монитор, клавиатура и компьютерная мышь"
-            />
-          </li>
-        </ul>
+          <ul class="services-list list">
+            <li class="item">
+              <img
+                src="./images/box1.jpeg"
+                width="370"
+                height="294"
+                alt="Человек набирает код на планшете. Рядом блок-схема и монитор"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/box2.jpeg"
+                width="370"
+                height="294"
+                alt="Человек делает прототипы экранов и держит телефон"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/box3.jpeg"
+                width="370"
+                height="294"
+                alt="Человек держит планшет с цветовой схемой. На заднем плане монитор, клавиатура и компьютерная мышь"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
       <section class="team">
-        <h2 class="team-title title">Наша команда</h2>
+        <div class="container">
+          <h2 class="team-title title">Наша команда</h2>
 
-        <ul class="team-list list">
-          <li class="item">
-            <img
-              src="./images/img.jpeg"
-              width="270"
-              height="260"
-              alt="Парень в очках и красной рубашке улыбается"
-              class="image"
-            />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p class="job">Product Designer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/img-1.jpeg"
-              width="270"
-              height="260"
-              alt="Женщина со светлыми очками в очках и пиджаке улыбается"
-              class="image"
-            />
-            <h3 class="name">Ольга Репина</h3>
-            <p class="job">Frontend Developer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/img-2.jpeg"
-              width="270"
-              height="260"
-              alt="Парень в голубой рубашке улыбается"
-              class="image"
-            />
-            <h3 class="name">Николай Тарасов</h3>
-            <p class="job">Marketing</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/img-3.jpeg"
-              width="270"
-              height="260"
-              alt="Парень в очках и черной футболке ухмыляется"
-            />
-            <h3 class="name">Михаил Ермаков</h3>
-            <p class="job">UI Designer</p>
-          </li>
-        </ul>
+          <ul class="team-list list">
+            <li class="item">
+              <img
+                src="./images/img.jpeg"
+                width="270"
+                height="260"
+                alt="Парень в очках и красной рубашке улыбается"
+                class="image"
+              />
+              <div class="item-content">
+                <h3 class="name">Игорь Демьяненко</h3>
+                <p class="job">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/img-1.jpeg"
+                width="270"
+                height="260"
+                alt="Женщина со светлыми очками в очках и пиджаке улыбается"
+                class="image"
+              />
+              <div class="item-content">
+                <h3 class="name">Ольга Репина</h3>
+                <p class="job">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/img-2.jpeg"
+                width="270"
+                height="260"
+                alt="Парень в голубой рубашке улыбается"
+                class="image"
+              />
+              <div class="item-content">
+                <h3 class="name">Николай Тарасов</h3>
+                <p class="job">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/img-3.jpeg"
+                width="270"
+                height="260"
+                alt="Парень в очках и черной футболке ухмыляется"
+              />
+              <div class="item-content">
+                <h3 class="name">Михаил Ермаков</h3>
+                <p class="job">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Футер -->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo logo"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
-      <div class="address-data">
-        <address class="footer-address">
-          г. Киев, пр-т Леси Украинки, 26
-        </address>
-        <ul class="address list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-info"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="address-info"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+      <div class="container">
+        <a href="./index.html" class="footer-logo logo"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
+        <div class="address-data">
+          <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="address list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-info">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="address-info">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
