--- a/portfolio.html
+++ b/portfolio.html
@@ -216,10 +216,10 @@
         <div class="address-data">
           <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
           <ul class="address list">
-            <li>
+            <li class="item">
               <a href="mailto:info@devstudio.com" class="address-info">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="item">
               <a href="tel:+380961111111" class="address-info">+38 096 111 11 11</a>
             </li>
           </ul>
